--- a/HackNotts/HackNotts.csproj
+++ b/HackNotts/HackNotts.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Silk.NET.Input" Version="2.16.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
+    <PackageReference Include="StbImageSharp" Version="2.27.13" />
   </ItemGroup>
 
   <ItemGroup>
